# si-image-trainer-mvp

./: .gitignore  AGENT.md  CLAUDE.md  EXPERIMENTS.md  HANDOFF.md  README.md  pyproject.toml
configs/: base.yaml  exp17.yaml  exp18.yaml  exp19.yaml  exp20.yaml  infer.yaml  train_metric.yaml
data/automation/phase_b/: cursor.json  last_accepted.jsonl
data/processed/: flash_labels.jsonl  flash_ranked.jsonl
docs/: ingestion-job.md
notebooks/: train_colab.ipynb
scripts/: build_comparison_page.py  build_contact_sheet.py  build_labeling_page.py  build_labeling_page_r2.py  build_validation_page.py  export_ranked_labels.py  fetch_flash_labels.py  local_infonce.py  local_rank.py  modal_inference.py  modal_phase_a.py  modal_train_metric.py  phase_b_refresh.py  prepare_colab_data.py  prepare_colab_reference.py  run_eval.sh  run_prepare.sh  run_train.sh
src/si_image_trainer/: cli.py
src/si_image_trainer/data/: deduplicate.py  prepare_queries.py  prepare_references.py  schemas.py  split_dataset.py
src/si_image_trainer/evaluation/: error_analysis.py  evaluate_calibration.py  evaluate_retrieval.py  metrics.py
src/si_image_trainer/indexing/: aggregate.py  build_index.py  search.py
src/si_image_trainer/inference/: pipeline.py  predict.py
src/si_image_trainer/models/: calibrator.py  detector.py  embedder.py
src/si_image_trainer/training/: train_metric.py  train_reranker.py
src/si_image_trainer/utils/: image.py  io.py
tmp/: sample_labels.json
