[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "si-image-trainer-mvp"
version = "0.1.0"
description = "Retrieval-first MVP for identifying Invader mosaics from flash images."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.26",
  "Pillow>=10.0",
  "PyYAML>=6.0",
  "ultralytics>=8.4",
]

[project.scripts]
siit = "si_image_trainer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
